--- a/templates/actions/settings/Settings.html
+++ b/templates/actions/settings/Settings.html
@@ -53,6 +53,24 @@
                 <input type="text" name="shop_pointsissue[link_name]" value="{$settings.link_name|escape}"/>
             </div>
         </div>
+        
+        <div class="field">
+            <div class="name">
+                Ширина модального окна
+            </div>
+            <div class="value">
+                <input type="text" name="shop_pointsissue[width_modal]" value="{$settings.width_modal|escape}"/>
+            </div>
+        </div>
+        
+        <div class="field">
+            <div class="name">
+                Высота модального окна
+            </div>
+            <div class="value">
+                <input type="text" name="shop_pointsissue[height_modal]" value="{$settings.height_modal|escape}"/>
+            </div>
+        </div>
 
         <div class="field">
             <a target="_blank" href="http://api.yandex.ru/maps/tools/constructor/">Конструктор Яндекс.Карт</a>
